ui界面调整及bug修改

--- a/project.config.json
+++ b/project.config.json
@@ -1,13 +1,16 @@
 {
-  "miniprogramRoot": "./dist",
-  "projectname": "scanbar-c",
-  "description": "C scanbar",
-  "appid": "wxba027d099f6ec41b",
-  "setting": {
-    "urlCheck": true,
-    "es6": false,
-    "postcss": false,
-    "minified": false
-  },
-  "compileType": "miniprogram"
+	"miniprogramRoot": "dist/",
+	"projectname": "scanbar-c",
+	"description": "C scanbar",
+	"appid": "wxba027d099f6ec41b",
+	"setting": {
+		"urlCheck": true,
+		"es6": false,
+		"postcss": false,
+		"minified": false
+	},
+	"compileType": "miniprogram",
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
+	"condition": {}
 }
