--- a/project.config.json
+++ b/project.config.json
@@ -1,13 +1,26 @@
 {
 	"miniprogramRoot": "dist/",
-	"projectname": "scanbar-c",
+	"projectname": "scanbar-costom",
 	"description": "C scanbar",
 	"appid": "wxba027d099f6ec41b",
 	"setting": {
 		"urlCheck": true,
 		"es6": false,
 		"postcss": false,
-		"minified": false
+		"minified": false,
+		"newFeature": true,
+		"coverView": true,
+		"autoAudits": false,
+		"showShadowRootInWxmlPanel": true,
+		"scopeDataCheck": false,
+		"checkInvalidKey": true,
+		"checkSiteMap": true,
+		"uploadWithSourceMap": true,
+		"babelSetting": {
+			"ignore": [],
+			"disablePlugins": [],
+			"outputPath": ""
+		}
 	},
 	"compileType": "miniprogram",
 	"simulatorType": "wechat",
