--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "nervjs": "^1.5.5",
     "node-sass": "^4.13.1",
     "numeral": "^2.0.6",
+    "promise-polyfill": "^8.1.3",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
