--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@tarojs/taro-swan": "1.3.17",
     "@tarojs/taro-tt": "1.3.17",
     "@tarojs/taro-weapp": "1.3.17",
+    "antd": "^4.2.5",
     "blueimp-md5": "^2.12.0",
     "classnames": "^2.2.6",
     "dayjs": "^1.8.17",
@@ -55,6 +56,8 @@
     "node-sass": "^4.13.1",
     "numeral": "^2.0.6",
     "promise-polyfill": "^8.1.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
