--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.10.1",
+    "@babel/preset-env": "^7.10.1",
     "@tarojs/async-await": "1.3.17",
     "@tarojs/components": "1.3.17",
     "@tarojs/components-qa": "1.3.17",
@@ -62,7 +64,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "taro-code": "^2.2.0",
-    "taro-ui": "^2.2.4"
+    "taro-ui": "^2.2.4",
+    "webpack-bundle-analyzer": "^3.8.0"
   },
   "devDependencies": {
     "@tarojs/plugin-babel": "1.3.17",
