--- a/project.config.json
+++ b/project.config.json
@@ -2,7 +2,7 @@
 	"miniprogramRoot": "dist/",
 	"projectname": "scanbar-costom",
 	"description": "C scanbar",
-	"appid": "wxba027d099f6ec41b", 
+	"appid": "wxeb047bda65bc4487", 
 	"setting": {
 		"urlCheck": true,
 		"es6": false,
