--- a/package.json
+++ b/package.json
@@ -65,10 +65,11 @@
     "redux-thunk": "^2.3.0",
     "taro-code": "^2.2.0",
     "taro-ui": "^2.2.4",
-    "webpack-bundle-analyzer": "^3.8.0"
+    "webpack-bundle-analyzer": "^3.8.0",
+    "xxx": "^0.0.1"
   },
   "devDependencies": {
-    "@tarojs/plugin-babel": "1.3.17",
+    "@tarojs/plugin-babel": "^2.2.10",
     "@tarojs/plugin-csso": "1.3.17",
     "@tarojs/plugin-less": "1.3.17",
     "@tarojs/plugin-sass": "^2.0.3",
